Enables monitoring dashboard to show check specific icons for a more lucid overview; Checks can be disabled by application property 'dash.iconsEnabled'; Icons have been added so far for: Datadog, Fabric, Jenkins, Jira, ExampleCheck

--- a/dash-core/src/main/resources/static/dash.css
+++ b/dash-core/src/main/resources/static/dash.css
@@ -29,6 +29,15 @@
     text-align: center;
 }
 
+.panel-content-left {
+    float: left;
+}
+
+.panel-content-right {
+    float: left;
+    margin: 5px 0 5px 5px;
+}
+
 .check.running {
     box-shadow: 0 0 22px;
 }
