optmize metainfo-display:
- nowrap
- pipeline executor only injects parameter value (and not name)

--- a/dash-core/src/main/resources/static/dash.css
+++ b/dash-core/src/main/resources/static/dash.css
@@ -10,6 +10,10 @@
     display: table-row;
 }
 
+.group-metainfo {
+    white-space: nowrap;
+}
+
 .stage-info {
     width: 6em;
     display: table-cell;
