--- a/dash-core/src/main/resources/static/dash.css
+++ b/dash-core/src/main/resources/static/dash.css
@@ -31,6 +31,7 @@
     margin-left: .5em;
     padding: .5em;
     text-align: center;
+    vertical-align: top;
 }
 
 .panel-content-left {
@@ -67,4 +68,25 @@
 
 .team-label {
     margin-right: 15px;
+}
+
+.comments {
+    clear: both;
+    padding-top: 5px;
+}
+
+.comments-form {
+    display: none;
+}
+
+.check:hover .comments-form {
+    display: block;
+}
+
+.check .comment {
+    padding: 0;
+    font-size: inherit;
+    margin: 5px 0;
+    text-align: left;
+    border-left: 5px solid #ababab;
 }
